Change the Customer and vendor auth flow
